Add observability stack: Prometheus, Grafana, Jaeger
Integrate full monitoring, logging, and tracing:
- Add observability services to docker-compose (Prometheus, Grafana,
  AlertManager, Jaeger, exporters)
- Add Makefile commands for observability stack management
- Add Prometheus metrics, OpenTelemetry tracing, and structured logging
  packages
- Implement health/readiness/liveness endpoints with MongoDB checks
- Add Grafana dashboards and Prometheus alert/recording rules
- Update .env.example with observability config variables
- Update go.mod/go.sum for

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,25 @@ MONGO_EXPRESS_PASSWORD=admin
 
 # Environment
 ENVIRONMENT=development
+
+# Logging Configuration
+LOG_LEVEL=info
+
+# Observability Stack Ports
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3000
+ALERTMANAGER_PORT=9093
+JAEGER_UI_PORT=16686
+JAEGER_COLLECTOR_PORT=14268
+NODE_EXPORTER_PORT=9100
+MONGODB_EXPORTER_PORT=9216
+REDIS_EXPORTER_PORT=9121
+
+# Grafana Configuration
+GRAFANA_USERNAME=admin
+GRAFANA_PASSWORD=admin
+
+# Service Ports
+MONGODB_PORT=27017
+MONGO_EXPRESS_PORT=8081
+REDIS_PORT=6379
