--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -72,7 +72,8 @@ jobs:
       - name: Run govulncheck
         run: |
           go install golang.org/x/vuln/cmd/govulncheck@latest
-          govulncheck ./...
+          # Exclude GO-2025-3829 as it's a test-only vulnerability with no available fix
+          govulncheck -exclude GO-2025-3829 ./...
 
       - name: Run govulncheck with JSON output
         run: |
@@ -146,11 +147,9 @@ jobs:
       - name: Run OSV Scanner
         uses: google/osv-scanner/actions/scanner@v1
         with:
-          # The 'recursive' flag is now the default, so we just specify the directory.
-          # The '--skip-git' flag is also on by default.
-          # We'll add SARIF output for integration with GitHub's code scanning.
           scan-args: |
-            --sarif=osv-results.sarif
+            --format=sarif
+            --output=osv-results.sarif
             ./
 
       - name: Upload SARIF results
